kubernetes/manifests/infra/namespaces.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
---
# HTTPS Redirect Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: authentik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
---
