kubernetes/manifests/infra/traefikDashboardIngress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule 
      match: Host(`traefik.slux-solutions.com`)
      services:
        - name: api@internal
          kind: TraefikService
